--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script defer src="main.js"></script>
+    <script defer src="script.js"></script>
     <title>Library</title>
 </head>
 
@@ -25,8 +25,10 @@
 
         </tbody>
         <tfoot>
-            <th colspan="3">Book Count</th>
-            <td id="count"></td>
+            <tr>
+                <th colspan="3">Book Count</th>
+                <th id="count"></th>
+            </tr>
         </tfoot>
     </table>
 
