--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <label for="pages">Pages <input type="number" id="pages" name="pages" min="1"> </label>
                 </div>
                 <div>
-                    <label for="read">Read <input type="checkbox" id="read" name="read"> </label>
+                    <label for="read">Read <input type="checkbox" id="read" name="read" value="read"> </label>
                 </div>
             </fieldset>
             <button type="submit" id="ok">OK</button>
