--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <button type="button" id="closeForm">X</button>
             <fieldset>
                 <div>
-                    <label for="author">Author <input type="text" id="author" name="author"> </label>
+                    <label for="author">Author <input type="text" id="author" name="author" required> </label>
                 </div>
                 <div>
-                    <label for="title">Title <input type="text" id="title" name="title"> </label>
+                    <label for="title">Title <input type="text" id="title" name="title" required> </label>
                 </div>
                 <div>
-                    <label for="pages">Pages <input type="number" id="pages" name="pages" min="1"> </label>
+                    <label for="pages">Pages <input type="number" id="pages" name="pages" min="1" required> </label>
                 </div>
                 <div>
                     <label for="read">Read <input type="checkbox" id="read" name="read" value="read"> </label>
